address PR comments and add comma separated county/state option
